change context from <scope> to <space>, updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,12 @@ application.url=${APPLICATION_URL:}
 #auth
 auth.enabled=${AUTH_ENABLED:true}
 
-#scopes
-scopes.default=default
-scopes.enabled=true
-scopes.list=*
-scopes.roles.mapping.user=components/goodtables/<scope>:ROLE_USER
+#spaces
+spaces.default=default
+spaces.enabled=true
+spaces.list=*
+spaces.roles.mapping.user=components/goodtables/<space>:ROLE_USER
+spaces.claim=${SPACE_CLAIM:context}
 
 #openid
 rest.security.issuer-uri=${OAUTH_ISSUER_URI:}
