--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ application.url=${APPLICATION_URL:}
 
 #auth
 auth.enabled=${AUTH_ENABLED:true}
+auth.component=${AUTH_COMPONENT:goodtables}
 
 #spaces
 spaces.default=default
@@ -23,18 +24,10 @@ spaces.roles.mapping.user=components/goodtables/<space>:ROLE_USER
 spaces.claim=${SPACE_CLAIM:context}
 
 #openid
-rest.security.issuer-uri=${OAUTH_ISSUER_URI:}
-security.oauth2.client.scopes=${OAUTH_SCOPES:profile, email, user.roles.me}
-security.oauth2.client.client-id=${OAUTH_CLIENT_ID:}
-security.oauth2.client.client-secret=${OAUTH_CLIENT_SECRET:}
-security.oauth2.client.access-token-uri=${OAUTH_TOKEN_URI:}
-security.oauth2.client.user-authorization-uri=${OAUTH_AUTH_URI:}
-security.oauth2.resource.id=${OAUTH_CLIENT_ID:}
-## if token are NOT JWT tokeninfo is required
-security.oauth2.resource.token-info-uri=${OAUTH_TOKEN_INTROSPECT_URI:}
-security.oauth2.resource.user-info-uri=${OAUTH_USERINFO_URI:}
-## if JWKS provided spring expects token as JWT
-security.oauth2.resource.jwk.key-set-uri=${OAUTH_JWKS_URI:}
+oauth2.issuer-uri=${OAUTH_ISSUER_URI:}
+oauth2.client-id=${OAUTH_CLIENT_ID:}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${oauth2.issuer-uri}
+spring.security.oauth2.resourceserver.client-id=${oauth2.client-id}
 
 # validator properties
 validator.maxsize = 10485760
